--- a/CSS/styleagain.css
+++ b/CSS/styleagain.css
@@ -93,6 +93,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 	overflow: inherit;
 }
 .sign{
+	font-size: 16px;
 	text-decoration: none;
 	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
 	color:white;
